--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Titel</h1>
+    <h2>Subtitel</h2>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nihil
       quod quos maiores aperiam voluptatum voluptatem? Qui alias, quaerat optio
